	PR c++/34964 	PR c++/35244 	* semantics.c (finish_omp_threadprivate): Do nothing for error_operand_p 	vars.  Afterwards ensure v is VAR_DECL.

* gcc.dg/gomp/pr34964.c: New test.
	* g++.dg/gomp/pr34964.C: New test.
	* gcc.dg/gomp/pr35244.c: New test.
	* g++.dg/gomp/pr35244.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@132425 138bc75d-0d04-0410-961f-82ee72b054a4