gcc/testsuite/gcc.dg/gomp/pr34964.c
@@ -1,0 +1,6 @@
+/* PR c++/34964 */
+/* { dg-do compile } */
+/* { dg-options "-fopenmp" } */
+
+char x[] = 0;	/* { dg-error "invalid initializer" } */
+#pragma omp threadprivate (x)
